minor tweaks in the intro and sim scenario 1

--- a/index.qmd
+++ b/index.qmd
@@ -29,15 +29,15 @@ editor_options:
 
 The rhythm of the human heart, far from being a simple, constant beat, is a complex and dynamic signal reflecting the continuous interplay between an organism and its internal and external environments. The precise timing between successive heartbeats, measured as the R-R interval (RRi), is a primary non-invasive proxy for autonomic nervous system (ANS) activity. The analysis of variations in this interval, a discipline known as heart rate variability (HRV), has become a cornerstone for assessing cardiovascular health, stress responses, and overall physiological state. This variability arises from the coordinated actions of multiple regulatory systems, including the sympathetic and parasympathetic branches of the ANS, baroreflexes, and thermoregulatory mechanisms.
 
-Despite its utility, a significant limitation of traditional HRV analysis is its reliance on time-domain or frequency-domain metrics derived from static, short-term data windows. While such methods may offer insights into a snapshot of a physiological state under controlled conditions, they are fundamentally ill-suited to capture the dynamic, non-stationary nature of RRi signals during physiological transitions or stress, such as exercise, cognitive tasks, or pharmacologic interventions. The implicit assumption of stationarity in these fixed-window approaches can obscure subtle, yet physiologically critical, shifts in heart rate and its underlying variability. Furthermore, these conventional analyses often fail to establish a direct mechanistic link between observed changes in HRV and the underlying physiological processes responsible for them. For instance, a generalized decrease in HRV may be interpreted as a withdrawal of parasympathetic tone but could also stem from a complex shift in the balance of different frequency components of autonomic modulation. Disentangling these potential causes necessitates a more sophisticated, unified modeling paradigm.
+Despite its utility, a significant limitation of traditional HRV analysis is its reliance on time-domain or frequency-domain metrics derived from static, short-term data windows. While such methods may offer insights into a snapshot of a physiological state under controlled conditions, they are fundamentally ill-suited to capture the dynamic, non-stationary nature of RRi signals during physiological transitions or stress. The implicit assumption of stationarity in these fixed-window approaches can obscure subtle, yet physiologically critical, shifts in heart rate and its underlying variability. Furthermore, these conventional analyses often fail to establish a direct mechanistic link between observed changes in HRV and the underlying physiological processes responsible for them.
 
-Attempts to address these limitations have been made using a variety of modeling approaches, but these have often fallen short. For instance, state-space models have shown promise in tracking the evolution of cardiac dynamics, but their complexity can make parameter estimation difficult and their physiological interpretability limited. While time-frequency analysis methods, such as wavelets, can successfully visualize the time-varying nature of spectral content, they typically do not provide a generative model for testing specific physiological hypotheses. Moreover, they often lack a principled way to separate structured physiological variability from unstructured noise. Other efforts have focused on non-linear dynamics and fractal analysis, but these models are often phenomenological, describing the properties of the signal without offering a clear, mechanistic link to the underlying physiology. Consequently, no existing model provides a unified, probabilistic framework that can simultaneously capture and mechanistically interpret changes in both the mean RRi and its multi-component variability.
+While various modeling approaches have attempted to address these limitations, they often fall short. For instance, state-space models have shown promise in tracking the evolution of cardiac dynamics, but their complexity can make parameter estimation difficult and their physiological interpretability limited. Time-frequency analysis methods, such as wavelets, can successfully visualize the time-varying nature of spectral content, but they typically do not provide a generative model for testing specific physiological hypotheses. Consequently, no existing model provides a unified, probabilistic framework that can simultaneously capture and mechanistically interpret changes in both the mean RRi and its multi-component variability.
 
-To advance the field beyond these constraints, a new generation of statistical models is clearly needed. These models must transcend simple descriptive statistics to provide a unified framework that simultaneously captures the time-varying nature of both the mean heart rate and the dynamic evolution of its multi-timescale variability. Such a framework should explicitly address the non-stationarity inherent to physiological signals, obviating the need for arbitrary, fixed-length analysis windows. It must be capable of decomposing the signal into its distinct components, separating the gross, underlying trends in heart rate from the structured, oscillatory variability that represents physiological regulation. Crucially, the model's parameters should have a direct, interpretable link to specific physiological processes, such as autonomic tone, sympathetic-parasympathetic balance, and the dynamics of recovery. As a probabilistic framework, it should also provide a principled means of quantifying the uncertainty associated with all parameter estimates, moving beyond a reliance on point estimates to offer a more complete picture of the physiological state.
+To advance the field beyond these constraints, a new generation of statistical models is clearly needed. A framework capable of surpassing these barriers should, at a minimum, satisfy four critical criteria. First, it must explicitly address the non-stationarity inherent to physiological signals, obviating the need for arbitrary analysis windows. Second, it must be capable of mechanistically decomposing the signal into its distinct components: a gross, underlying trend in heart rate and the structured, oscillatory variability that represents physiological regulation. Third, its parameters should have a direct, interpretable link to specific physiological processes, such as autonomic tone and recovery dynamics. Finally, as a probabilistic framework, it must provide a principled means of quantifying uncertainty for all estimates, moving beyond a reliance on simple point estimates.
 
-This paper presents a novel probabilistic framework for analyzing non-stationary RRi signals. Our approach directly confronts these challenges by formulating the RRi signal as a continuous stochastic process. This model decomposes the signal into a deterministic mean trajectory and a time-varying total standard deviation, both of which are constructed mechanistically. The model's key innovations include a mechanistic model for the mean RRi that uses a flexible double-logistic function to allow for the direct estimation of physiologically salient parameters, such as the magnitude of heart rate change and the timing of response and recovery. A core innovation is the explicit decomposition of the total signal variance into components representing structured, oscillatory variability and unstructured, residual noise, which is critical for understanding the sources of change in HRV. We generalize the traditional SDNN metric into a time-varying trajectory, which is also modeled using a logistic function analogous to that for the mean RRi, thereby capturing the dynamic suppression and recovery of total variability in a parsimonious manner. A crucial mathematical inversion within the framework ensures that the amplitude of the synthesized structured signal exactly matches the target SDNN trajectory at every time point, effectively decoupling the total magnitude of variability from its spectral composition and enabling more granular analysis. Finally, the model captures the dynamic allocation of power across different physiological frequency bands by modeling their proportions as a function of a smooth master controller, which allows for a detailed analysis of shifts in spectral balance during physiological transitions.
+To meet these challenges, we therefore propose a novel probabilistic framework. Here, we introduce a model designed to directly confront non-stationarity by treating the RRi signal as a continuous stochastic process. This framework is built to mechanistically decompose the signal into its constituent parts, including a baseline trend and its structured variability. Its core components are defined by flexible functions whose parameters are intended to provide direct physiological insight into response and recovery dynamics. Finally, we will demonstrate how its implementation as a fully Bayesian model yields the robust uncertainty quantification required of a modern analytical framework.
 
-The primary objective of this study is to introduce and validate this novel probabilistic model for the analysis of non-stationary RRi signals. We aim to demonstrate that this framework provides a more robust, informative, and physiologically interpretable analysis of heart rate dynamics than traditional methods. We hypothesize that the model will accurately and robustly capture the complex, time-varying dynamics of both the mean RRi and its variability during transient physiological perturbations. We further propose that the model's parameters will yield enhanced mechanistic nuance into autonomic control and cardiovascular regulation, thereby serving as a superior tool for both clinical research and basic physiological investigation. Through this work, we seek to establish a new standard for the analysis of time-varying physiological signals.
+This study introduces and validates a novel probabilistic model for analyzing non-stationary RRi signals. We test the central hypothesis that this framework provides a more robust, informative, and physiologically interpretable analysis of heart rate dynamics than traditional methods. Specifically, we demonstrate its ability to accurately capture transient perturbations and show that its parameters offer enhanced mechanistic nuance into autonomic control. Through this work, we seek to establish a new standard for the analysis of dynamic physiological signals.
 
 ```{r}
 #| include: false
